# Projeto_ML

./: README.md  app.py  pyproject.toml
