[tool.poetry]
name = "projeto-ml01"
version = "0.1.0"
description = ""
authors = ["AlexDPaiva <alex.rl.paiva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
